fix: z-index of cart page header

--- a/store/src/styles/sections/onDemandCart.scss
+++ b/store/src/styles/sections/onDemandCart.scss
@@ -1,6 +1,6 @@
 .hern-cart-page__header {
    height: 64px;
-   z-index: 9999;
+   z-index: 99;
    width: 100%;
    background-color: white;
    border-bottom-width: 1px;
